16954
checkout master, build pack, then run the below. works when source file order is changed.
```scala

lamppc11:scala luc$ build/pack/bin/scalac -d tmp src/library/scala/text/Document.scala src/library/scala/collection/immutable/List.scala
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
src/library/scala/text/Document.scala:43: error: type mismatch;
 found   : T3
 required: scala.text.Document
    def fits(w: Int, state: List[FmtState]): Boolean = state match {
                                                       ^
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
error: variable hd in class :: cannot be accessed in collection.immutable.::[(Int, Boolean, scala.text.Document)]
src/library/scala/text/Document.scala:73: error: type mismatch;
 found   : T3
 required: scala.text.Document
    def fmt(k: Int, state: List[FmtState]): Unit = state match {
                                                   ^
46 errors found
lamppc11:scala luc$ 
```
